codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__experimental_popup_includes_guardian_approval.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Experimental features
  Toggle experimental features. Changes are saved to config.toml.

› [ ] JavaScript REPL                Enable a persistent Node-backed JavaScript REPL for interactive website debugging
                                     and other inline JavaScript execution capabilities. Requires Node >= v22.22.0
                                     installed.
  [ ] Multi-agents                   Ask Codex to spawn multiple agents to parallelize the work and win in efficiency.
  [ ] Apps                           Use a connected ChatGPT App using "$". Install Apps via /apps command. Restart
                                     Codex after enabling.
  [ ] Translate reasoning summaries  Translate streamed reasoning summaries into Chinese using the configured
                                     translation provider.
  [ ] Guardian approvals             Let a guardian subagent review `on-request` approval prompts instead of showing
                                     them to you, including sandbox escapes and blocked network access.
  [ ] Prevent sleep while running    Keep your computer awake while Codex is running a thread.

  Press space to select or enter to save for next conversation
