codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__hooks_manager_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Global hooks (user)
  /home/user/.codex/config.toml

  Type to search hooks
› Add hook              Create a new hook entry.
  Edit raw config.toml  Edit the entire file (advanced).
  stop: Stop hook       "echo hi"

  Press enter to confirm or esc to go back
