codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_line_context_remaining_footer.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                                    "
"                                                                                                    "
"› Ask Codex to do anything                                                                          "
"                                                                                                    "
"  Full [██████] 258K · Compact [██████] 231K                                                        "
