codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_line_multiline_footer.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                                    "
"                                                                                                    "
"› Ask Codex to do anything                                                                          "
"                                                                                                    "
"  gpt-5.4 xhigh · Full [████████] 245K · Compact [████████] 219K                                    "
"  /repo                                                                                             "
